Fixed image sizing overflowing on webview, list updates

--- a/GA-TB-Reference-Guide/html-content/assets/style.css
+++ b/GA-TB-Reference-Guide/html-content/assets/style.css
@@ -129,7 +129,7 @@
 html {
   /* 1 */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: normal;
   line-height: 1.5;
   /* 2 */
@@ -142,6 +142,8 @@ html {
 body {
   margin: 0;
   line-height: 1.7;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 a:active,
@@ -177,6 +179,23 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--titles-color);
 }
 
+ul {
+  list-style: disc;
+  font-style: normal !important;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+.ic_title_icon {
+    height: 50px !important;
+    width: 50px !important;
+	object-fit: fill !important;
+}
+
 /* ========================================================================
    Component: Table
  ========================================================================== */
@@ -192,12 +211,12 @@ h1, h2, h3, h4, h5, h6 {
   /* 2 */
   width: 100%;
   /* 3 */
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   background-color: var(--background-color-secondary);
 }
 /* Add margin if adjacent element */
 * + .uk-table {
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 /* Header cell
  ========================================================================== */
@@ -205,7 +224,7 @@ h1, h2, h3, h4, h5, h6 {
  * 1. Style
  */
 .uk-table th {
-  padding: 16px 12px;
+  padding: 1rem 0.75rem;
   text-align: left;
   vertical-align: bottom;
   /* 1 */
@@ -217,7 +236,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Cell
  ========================================================================== */
 .uk-table td {
-  padding: 16px 12px;
+  padding: 1rem 0.75rem;
   vertical-align: top;
 }
 /*
@@ -283,11 +302,11 @@ h1, h2, h3, h4, h5, h6 {
  ========================================================================== */
 .uk-table-small th,
 .uk-table-small td {
-  padding: 10px 12px;
+  padding: 0.625rem 0.75rem;
 }
 .uk-table-large th,
 .uk-table-large td {
-  padding: 22px 12px;
+  padding: 1.375rem 0.75rem;
 }
 /* Justify modifier
  ========================================================================== */
@@ -305,7 +324,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 1px;
 }
 .uk-table-expand {
-  min-width: 150px;
+  min-width: 9.375rem;
 }
 /* Cell link modifier
  ========================================================================== */
@@ -317,10 +336,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 .uk-table-link > a {
   display: block;
-  padding: 16px 12px;
+  padding: 1rem 0.75rem;
 }
 .uk-table-small .uk-table-link > a {
-  padding: 10px 12px;
+  padding: 0.625rem 0.75rem;
 }
 /* Responsive table
  ========================================================================== */
@@ -433,15 +452,13 @@ table, td, th {
 }
 
 a {
-    font-style: italic;
-    text-decoration: none !important;
+    font-style: normal;
+    text-decoration: underline !important;
     color: var(--link-color) !important;
 }
 
-
-
 .uk-table th {
-    padding: 16px 12px;
+    padding: 1rem 0.75rem;
     text-align: left;
     vertical-align: bottom;
     font-size: 1rem;
@@ -453,6 +470,9 @@ a {
 .uk-table td {
   color: var(--body-color-secondary);
 }
+
+
+/* Tabs */
 
 .uk-tabs-container .tabs {
     display: flex;
@@ -474,11 +494,11 @@ a {
     justify-items: center;
     justify-content: center;
     align-items: center;
-    gap: 16px;
-    padding: 16px;
+    gap: 1rem;
+    padding: 1rem;
     text-align: center;
     vertical-align: bottom;
-    font-size: 16px;
+    font-size: 1rem;
     background-color: var(--inactive-tab-color);
     color: var(--inactive-tab-text-color);
     text-transform: capitalize;
@@ -486,7 +506,7 @@ a {
     border: none;
     border-radius: var(--tab-radius);
     box-shadow: var(--tab-box-shadow);
-    width: 150px;
+    max-width: 150px;
     height: 100%;
     box-sizing: border-box;
 }
@@ -531,13 +551,13 @@ td {
 }
 
 td ul {
-    padding-left: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-left: 1.25rem;
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
 }
 
 h3.highlight {
-    margin-top: 16px;
+    margin-top: 1rem;
     padding-top: 0;
 }
 
@@ -546,7 +566,7 @@ h3.highlight {
 }
 
 .duration {
-    font-size: 16px;
+    font-size: 1rem;
     margin-bottom: 0;
     padding-bottom: 0;
 }
@@ -562,8 +582,8 @@ h3.highlight {
 }
 
 .uk-list {
-    padding-left: 24px;
-    list-style: none;
+    padding-left: 1.5rem;
+    font-style: normal;
 }
 
 .uk-list.togglers-list {
@@ -573,24 +593,24 @@ h3.highlight {
 .uk-paragraph {
   position: relative;
   text-indent: 1em;
-  margin: 16px 0;
+  margin: 1rem 0;
 }
 
 .uk-paragraph::before {
   content: "";
   position: absolute;
   left: 0;
-  top: -4px;
-  height: 32px;
-  width: 8px;
+  top: -0.25rem;
+  height: 2rem; 
+  width: 0.5rem; 
   background-color: var(--primary-color);
-  border-radius: 4px;
+  border-radius: 0.25rem; 
 }
 
 .uk-list-title,
 .custom-table-title {
     position: relative;
-    padding-left: 24px;
+    padding-left: 1.5rem;
 }
 
 .uk-list-title::before,
@@ -598,14 +618,14 @@ h3.highlight {
   content: "";
   position: absolute;
   left: 0;
-  top: -3px;
-  height: 32px;
-  width: 8px;
-  border-radius: 4px;
+  top: -0.1875rem;
+  height: 2rem; 
+  width: 0.5rem; 
+  border-radius: 0.25rem; 
 }
 
 .uk-list-title::before {
-    top: -2px;
+    top: -0.125rem;
     background-color: var(--list-title-color);
 }
 
@@ -620,17 +640,17 @@ h3.highlight {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 32px;
+  gap: 2rem;
   width: 100%;
   z-index: 10;
   background-color: var(--background-color);
-  padding: 14px 0;
+  padding: 0.875rem 0;
 }
 
 .chevron-up {
     transform: rotate(-180deg);
     transition: transform var(--transition-duration) ease-in-out;
-    font-size: 24px;
+    font-size: 1.5rem; 
 }
 
 .chevron-up.active {
